added leaderboard with appendChild

--- a/assets/style.css
+++ b/assets/style.css
@@ -46,6 +46,17 @@ main {
     font-size: 2em;
     border-radius: 20px;
 }
+#submit-btn {
+    background: purple;
+    /* replace with reference tag */
+    color: white;
+    margin: 20px;
+    padding: 3px 10px;
+    width: 40%;
+    text-align: center;
+    font-size: 2em;
+    border-radius: 20px;
+}
 .start-screen {
     text-align: center;
 
