--- a/assets/style.css
+++ b/assets/style.css
@@ -35,7 +35,7 @@ main {
     box-shadow: 0 0 30px;
     
 }
-#start-btn #submit-btn  #return-btn{
+#start-btn, #submit-btn {
     background: purple;
     /* replace with reference tag */
     color: white;
@@ -44,6 +44,17 @@ main {
     width: 40%;
     text-align: center;
     font-size: 2em;
+    border-radius: 20px;
+}
+#return-btn {
+    background: purple;
+    /* replace with reference tag */
+    color: white;
+    margin: 20px;
+    padding: 0 80px 0 20px;
+    width: 40%;
+    text-align: center;
+    font-size: 1.4em;
     border-radius: 20px;
 }
 
